--- a/package.json
+++ b/package.json
@@ -1,23 +1,21 @@
 {
   "name": "allons-y-media",
-  "version": "0.1.0",
-  "description": "",
-  "main": "index.js",
+  "version": "1.0.0",
+  "description": "Distribute /media/* urls.",
+  "license": "MIT",
+  "homepage": "http://allons-y.io",
+  "author": "CodeCorico <hello@codecorico.com>",
+  "bugs": "https://github.com/CodeCorico/allons-y-media/issues",
   "repository": {
     "type": "git",
     "url": "https://github.com/CodeCorico/allons-y-media.git"
   },
-  "author": "CodeCorico <hello@codecorico.com>",
-  "bugs": {
-    "url": "https://github.com/CodeCorico/allons-y-media/issues"
-  },
-  "homepage": "https://github.com/CodeCorico/allons-y-media",
   "engines": {
     "node": ">=4.1",
     "npm": ">=3.2"
   },
-  "license": "MIT",
   "dependencies": {
+    "allons-y-express": "^1.0.0",
     "busboy": "^0.2.13",
     "events-manager": "^1.1.2",
     "extend": "^3.0.0",
