chore(project): update files from the allons-y project

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "Distribute /media/* urls.",
   "license": "MIT",
-  "homepage": "http://allons-y.io",
+  "homepage": "https://allons-y.io",
   "author": "CodeCorico <hello@codecorico.com>",
   "bugs": "https://github.com/CodeCorico/allons-y-media/issues",
   "repository": {
@@ -14,8 +14,11 @@
     "node": ">=4.1",
     "npm": ">=3.2"
   },
+  "devDependencies": {
+    "allons-y-dev-chore": "^1.0.0"
+  },
   "dependencies": {
-    "allons-y-express": "^1.0.0",
+    "allons-y-express": "^1.0.3",
     "busboy": "^0.2.13",
     "events-manager": "^1.1.2",
     "extend": "^3.0.0",
